# raster-loader

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  conftest.py  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  upload_multiband.py  upload_multiband_from_gee.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  pypi-publish.yml
docker/raster_loader/: Dockerfile
docs/: README.md  errors.md  post.sh  upload.md  utils.md
docs/source/: cli.rst  conf.py  index.rst
docs/source/_static/: custom.css
docs/source/developer_guide/: contribute.rst  roadmap.md
docs/source/developer_guide/modules/: raster_loader.cli.rst  raster_loader.rst
docs/source/modules/: modules.rst  raster_loader.rst
docs/source/user_guide/: cli.rst  installation.rst  usage_examples.rst  use_with_python.rst
docs/source/user_guide/modules/: raster_loader.rst
examples/: raster_loader_notebook.ipynb  raster_loader_script.py
parquet_poc/: overviews_test.py  parquet_poc.py  quadbin_vectorized.py
parquet_poc/tests/: bq_uncompress_test.sql  creating_vrt.py  overview_creation_test.py  using_rioxarray.py
parquet_poc/tests/data/: raster_3.parquet
raster_loader/: __init__.py  errors.py  io.py  quadbinarea.py  upload.py  utils.py  valuelabels.py
raster_loader/cli/: __init__.py  bigquery.py  common.py  databricks.py  gee.py  info.py  snowflake.py
raster_loader/io/: bigquery.py  bigquery_windows.py  common.py  common_windows.py  databricks.py  datawarehouse.py  parquet_poc.py  quadbin_vectorized.py  snowflake.py
raster_loader/lib/: geo.py  valuelabels.py
raster_loader/raster_loader_cli/: __init__.py  cli.py  cli_info.py  cli_raster.py  setup.py
raster_loader/raster_loader_cli/tests/: test_cli.py
raster_loader/tests/: .env.sample  mocks.py  test_cli.py  test_io.py  test_quadbin_area.py  test_upload.py  test_utils.py
raster_loader/tests/bigquery/: test_cli.py  test_io.py
raster_loader/tests/databricks/: test_cli.py  test_io.py
raster_loader/tests/fixtures/: cog_rat.tif  cog_rat.tif.vat.dbf  expected_blocksize_512.pkl  expected_custom_column.npy  expected_custom_column.pkl  expected_custom_multiple_column.npy  expected_custom_multiple_column.pkl  expected_default_column.npy  expected_default_column.pkl  expected_default_multiple_column.npy  expected_multiple_column.pkl  mosaic_cog.tif  mosaic_cog_1_1.tif  mosaic_cog_1_2.tif  mosaic_cog_2_1.tif  mosaic_cog_2_2.tif  mosaic_cog_512.tif  mosaic_wm.tif  world_3857.tif  world_zoom_0-2.cog.tif
raster_loader/tests/snowflake/: __init__.py  test_cli.py  test_io.py
temporal_raster/: entrypoint_WS_loop_netcdf_w_time.sh  entrypoint_WS_loop_netcdf_w_time_1day.sh
tests/: mocks.py  test_cli.py  test_upload.py  test_utils.py
tests/fixtures/: token_ok.json
