[metadata]
name = raster-loader
description = Python library to authenticate with CARTO
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    carto
    auth
    oauth
    carto-dw
    bigquery
author = CARTO
author_email = jarroyo@carto.com
url = https://github.com/cartodb/raster-loader
license = BSD 3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    click>=8.1.3
    click-plugins>=1.1.1
    google-cloud-bigquery>=3.4.0
    pandas>=1.3.4
    pyproj>=3.2.1
    rasterio>=1.3.4
zip_safe = False

[options.entry_points]
console_scripts =
    carto = raster_loader.cli:main
raster_loader.cli =
    bigquery = raster_loader.cli.bigquery:bigquery


[options.extras_require]
test =
    pytest>=7.2.0
    pytest-mock>=3.10.0
    pytest-cov>=4.0.0

[flake8]
max-line-length = 88
ignore = E203