[metadata]
name = raster-loader
description = Python library for loading GIS raster data to standard cloud-based data warehouses that don't natively support raster data.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    carto
    raster
    gis
    data warehouse
    bigquery
    snowflake
    databricks
author = CARTO
url = https://github.com/cartodb/raster-loader
license = BSD 3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    click-plugins>=1.1.1
    click>=8.1.3
    db-dtypes>=1.0.5
    pandas>=1.3.4
    pyarrow>=10.0.1
    pyproj>=3.2.1
    rasterio>=1.3a3
    rio-cogeo>=3.5.0
    shapely>=1.7.1
    quadbin>=0.2.0
    tqdm>=4.64.1
zip_safe = False

[options.entry_points]
console_scripts =
    carto = raster_loader.cli:main
raster_loader.cli =
    bigquery = raster_loader.cli.bigquery:bigquery
    snowflake = raster_loader.cli.snowflake:snowflake
    databricks = raster_loader.cli.databricks:databricks
    info = raster_loader.cli.info:info

[options.extras_require]
test =
    pytest>=7.1.2
    pytest-mock>=3.8.2
    pytest-cov>=3.0.0
bigquery =
    google-cloud-bigquery>=3.13.0
    google-auth>=2.28.0
snowflake =
    snowflake-connector-python>=2.6.0
databricks =
    databricks-connect==13.0.1

all =
    %(bigquery)s
    %(snowflake)s
    %(databricks)s

[flake8]
max-line-length = 88
ignore = E203 W503

